# groundstation

./: .CODEOWNERS  .gitignore  FORMATS.md  README.md  example_secrets.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: frontend-checks.yml  frontend.yml  orchestration.yml  writing-checks.yml
firmware/: README.md
firmware/dc_motor_controller/: dc_motor_controller.ino
firmware/stepper_motor_controller/: easycomm.h  rotator_pins.h  stepper_motor_controller.ino
frontend/: .eslint.js  .eslintrc.js  .lighthouserc.js  README.md  index.html  package-lock.json  package.json  params.json  pnpm-lock.yaml  serve.py  tsconfig.json
frontend-new/: package-lock.json
frontend-react/: .eslintrc.js  README.md  package-lock.json  package.json
frontend-react-tsx/: .prettierrc  package-lock.json  package.json  tailwind.config.js
frontend-react-tsx/src/: App.css  App.tsx  Groundstation.ts  Home.tsx  State.ts  Websocket.ts  index.tsx
frontend-react-tsx/types/: hardwareTypes.ts  n2yotypes.ts  targetSat.ts
frontend-react/src/: App.tsx
hardware/: README.md
orch/: .pylintrc  README.md  api.py  encounter.py  frontend_api.py  geolocation.py  groundstation.py  my_gps.py  n2yo.py  requirements.txt  serve.py  storage.py
orch-rs/: Cargo.toml  README.md
orch-rs/examples/: prop_test.rs
orch-rs/src/: groundstation.rs  main.rs  prop_test.rs  propagator.rs  state.rs  websocket.rs
orch-rs/src/state/: action.rs  mod.rs  point.rs
rotator-rs/: Cargo.toml  README.md
sigproc/: README.md  main.py  requirements.txt  supported_sats.json
utils/: README.md
(+118 files in other folders)
