[package]
name = "orch-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.6", features = ["ws"] }
futures = "0.3"
json-patch = "1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.27", features = ["full"] }
serial = "0.4.0"
serialport = "4.2.1"
nyx-space = "1.1.2"
sgp4 = "1.2.2"
# reqwest = "0.11.20"
ureq = { version = "*", features = ["json"] }
nalgebra = "0.32.3"
